examples/envoy/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: echo_service

          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              config:
                name: "moesif_api"
                root_id: "moesif_api_root_id"
                configuration:
                  "@type": "type.googleapis.com/google.protobuf.StringValue"
                  value: |
                    {
                      "moesif_application_id":"<YOUR APPLICATION ID HERE>", 
                      "user_id_header":"X-User-Example-Header",
                      "company_id_header":"X-Company-Example-Header"
                    }
                vm_config:
                  vm_id: "moesif_api_vm"
                  code:
                    local:
                      # path to the compiled wasm file in your Envoy container
                      filename: "/etc/envoy/proxy-wasm-plugins/moesif_wasm_plugin.wasm"
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: echo_service
    type: strict_dns
    dns_refresh_rate: 500s
    load_assignment:
      cluster_name: echo_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: echo
                port_value: 5678
  - name: moesif_api
    type: logical_dns
    dns_refresh_rate: 500s
    load_assignment:
      cluster_name: moesif_api
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: api.moesif.net
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
